--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,9 +62,9 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.6.0'
 
     // for room persistence
-    implementation "androidx.room:room-runtime:2.5.1"
-    implementation "androidx.room:room-rxjava2:2.5.1"
-    kapt "androidx.room:room-compiler:2.5.1"
+    implementation "androidx.room:room-runtime:2.5.2"
+    implementation "androidx.room:room-rxjava2:2.5.2"
+    kapt "androidx.room:room-compiler:2.5.2"
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0"
 
@@ -74,5 +74,8 @@ dependencies {
 
     // viewPager
     implementation "androidx.viewpager2:viewpager2:1.0.0"
+
+    // splash screen
+    implementation "androidx.core:core-splashscreen:1.0.1"
 
 }
